--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,14 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/google": "^1.2.22",
     "@ai-sdk/openai": "^1.3.24",
+    "@types/multer": "^2.0.0",
     "ai": "^4.3.16",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.22.1",
     "lowdb": "^7.0.1",
+    "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
